force-app/main/default/objects/Check_In__c/fields/Aeroporto_de_Destino__c.field-meta.xml
<CustomField>
    <fullName>Aeroporto_de_Destino__c</fullName>
    <label>Aeroporto de Destino</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GRU</fullName>
            </value>
            <value>
                <fullName>GIG</fullName>
            </value>
            <value>
                <fullName>BSB</fullName>
            </value>
            <value>
                <fullName>CWB</fullName>
            </value>
            <value>
                <fullName>SSA</fullName>
            </value>
            <value>
                <fullName>CNF</fullName>
            </value>
            <value>
                <fullName>BEL</fullName>
            </value>
            <value>
                <fullName>FLN</fullName>
            </value>
            <value>
                <fullName>NAT</fullName>
            </value>
            <value>
                <fullName>CGH</fullName>
            </value>
            <value>
                <fullName>POA</fullName>
            </value>
            <value>
                <fullName>MAO</fullName>
            </value>
            <value>
                <fullName>REC</fullName>
            </value>
            <value>
                <fullName>FOR</fullName>
            </value>
            <value>
                <fullName>CGB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>