force-app/main/default/objects/Check_In__c/fields/Codigo_do_Voo__c.field-meta.xml
<CustomField>
    <fullName>Codigo_do_Voo__c</fullName>
    <label>Código do Voo</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>