force-app/main/default/objects/Check_In__c/fields/Horario_de_Check_In__c.field-meta.xml
<CustomField>
    <fullName>Horario_de_Check_In__c</fullName>
    <label>Horário de Check-In</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>