force-app/main/default/objects/Check_In__c/fields/Horario_do_Voo__c.field-meta.xml
<CustomField>
    <fullName>Horario_do_Voo__c</fullName>
    <label>Horário do Voo</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>