force-app/main/default/objects/Check_In__c/fields/Numero_do_Assento__c.field-meta.xml
<CustomField>
    <fullName>Numero_do_Assento__c</fullName>
    <label>Número do Assento</label>
    <length>5</length>
    <required>true</required>
    <type>Text</type>
</CustomField>