force-app/main/default/objects/Check_In__c/validationRules/Impedir_edicao_CheckIn_nao_realizado.validationRule-meta.xml
<ValidationRule>
    <fullName>Impedir_edicao_CheckIn_nao_realizado</fullName>
    <active>true</active>
    <description>Impedir edição de Check-In com Status 'Não Realizado'</description>
    <errorConditionFormula>AND(
    ISPICKVAL(PRIORVALUE(Status__c), &quot;Não Realizado&quot;),
    NOT(ISNEW())
)</errorConditionFormula>
    <errorMessage>Registros com Status &apos;Não Realizado&apos; não podem ser editados.</errorMessage>
</ValidationRule>